# EPS-personalModelTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.json
Documentation/.obsidian/: graph.json  workspace.json
Documentation/Architecture/: main.cpp.md
Documentation/Architecture/headers/entities/geometry/: Geometry.h.md
Documentation/oldModelFiles/Headers/: DefinedGeometry.h  Pack.h
Documentation/oldModelFiles/SRC/: Cell.cpp
docs/: inputPackListSample.json  input_for_model.json  outputPackListSample.json
docs/Documentation/.obsidian/: graph.json  workspace.json
docs/Documentation/Architecture/: main.cpp.md
docs/Documentation/Architecture/headers/entities/geometry/: Geometry.h.md  Plane.h.md
docs/Documentation/Architecture/headers/entities/physical/: Pack.h.md  Pallet.h.md
docs/Documentation/Architecture/src/logic/ordinamentoPacchi/: ordinamentoPacchi.cpp.md
docs/oldModelFiles/: CMakeLists.txt
docs/oldModelFiles/Headers/: Cell.h  DefinedObjects.h  GridSpace.h  Pallet.h
docs/oldModelFiles/SRC/: Pack.cpp  PalletGroup.cpp
headers/entities/geometry/: Cell.hpp  Domain.hpp  Geometry.hpp  Grid.hpp  PackDomain.hpp  Plane.hpp  TotalDomain.hpp
headers/entities/physical/: 3D_object.hpp  Pack.hpp  Pallet.hpp  PalletGroup.hpp
headers/logic/: letturaFileJson.hpp  ordinamentoPacchi.hpp  ottimizzazione.hpp  quickSort.hpp  sceltaPacchiNesting.hpp  spostaPacchi.hpp  test.hpp  trovaDominio.hpp
headers/logic/BoxNesting/: BoxNesting.hpp  deprecated_BoxNesting.hpp  mainLoops.hpp
headers/logic/LetturaJson/: letturaFileJson.hpp
headers/logic/MainMethods/: fitIntoPallet.hpp  test.hpp
headers/logic/OrdinamentoPacchi/: ordinamentoPacchi.hpp
old/doc/: HashTables.txt  README.txt
old/headers/Operations/: nestingSort.h
old/src/3D_Objects/: Pallet.cpp
oldModel/: main.cpp
oldModel/003/headers/3D_Objects/: PalletGroup.h
oldModel/003/input/: spedizioni.json
oldModel/003/src/Operations/: nestingSort.cpp
oldModel/src/Geometry/: GridSpace.cpp
src/entities/geometry/: Domain.cpp  Geometry.cpp  Grid.cpp  PackDomain.cpp  Plane.cpp  TotalDomain.cpp
src/entities/physical/: 3D_object.cpp  Pack.cpp  Pallet.cpp  PalletGroup.cpp
src/logic/BoxNesting/: BoxNesting.cpp  deprecated_BoxNesting.cpp  mainLoops.cpp
src/logic/LetturaJson/: letturaFileJson.cpp
src/logic/mainMethods/: fitIntoPallet.cpp  letturaFileJson.cpp  messages.cpp  test.cpp
src/logic/ordinamentoPacchi/: ordinamentoPacchi.cpp  quickSort.cpp
src/logic/ottimizzazione/: ottimizzazione.cpp
src/logic/quickSort/: quickSort.cpp
src/logic/sceltaPacchiNesting/: sceltaPacchiNesting.cpp
src/logic/spostaPacchi/: spostaPacchi.cpp
src/logic/trovaDominio/: trovaDominio.cpp
